--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,22 @@
 [build-system]
-requires = ["poetry>=1.2.0b2"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.2.0b2"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "visual_graph_datasets"
 version = "0.1.0"
 description = "Datasets for the training of graph neural networks (GNNs) and subsequent visualization of attributional explanations of XAI methods"
 licence = "MIT"
-authors = [""]
-maintainers = [""]
+authors = ["awa59kst120df <awa59kst120df@gmail.com>"]
+maintainers = ["awa59kst120df <awa59kst120df@gmail.com>"]
 readme = "README.rst"
 keywords = ["graph neural networks", "datasets", "explainable AI"]
 packages = [
-    {include = "visual_graph_dataset"}
+    { include = "visual_graph_datasets" }
 ]
-include = []
+include = [
+    "visual_graph_datasets/VERSION",
+]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
@@ -24,7 +26,7 @@ jinja2 = "3.0.3"
 numpy = ">=1.23.2"
 matplotlib = ">=3.5.3"
 psutil = ">=5.7.2"
-pytest = "7.1.3"
+pytest = "7.2.0"
 orjson = "3.8.1"
 
 [tool.poetry_bumpversion.file."visual_graph_datasets/VERSION"]
