--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "visual_graph_datasets"
-version = "0.1.0"
+version = "0.2.0"
 description = "Datasets for the training of graph neural networks (GNNs) and subsequent visualization of attributional explanations of XAI methods"
-licence = "MIT"
+license = "MIT"
 authors = ["awa59kst120df <awa59kst120df@gmail.com>"]
 maintainers = ["awa59kst120df <awa59kst120df@gmail.com>"]
 readme = "README.rst"
@@ -20,14 +20,14 @@ include = [
 
 [tool.poetry.dependencies]
 python = ">=3.8"
-poetry-bumpversion = "0.3.0"
-click = "7.1.2"
-jinja2 = "3.0.3"
+poetry-bumpversion = ">=0.3.0"
+click = ">=7.1.2"
+jinja2 = ">=3.0.3"
 numpy = ">=1.23.2"
 matplotlib = ">=3.5.3"
 psutil = ">=5.7.2"
-pytest = "7.2.0"
-orjson = "3.8.1"
+pytest = ">=7.2.0"
+orjson = ">=3.8.1"
 
 [tool.poetry_bumpversion.file."visual_graph_datasets/VERSION"]
 search = "{current_version}"
