--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "visual_graph_datasets"
-version = "0.2.0"
+version = "0.4.0"
 description = "Datasets for the training of graph neural networks (GNNs) and subsequent visualization of attributional explanations of XAI methods"
 license = "MIT"
 authors = ["awa59kst120df <awa59kst120df@gmail.com>"]
@@ -28,6 +28,7 @@ matplotlib = ">=3.5.3"
 psutil = ">=5.7.2"
 pytest = ">=7.2.0"
 orjson = ">=3.8.1"
+pyyaml = ">=0.6.0"
 
 [tool.poetry_bumpversion.file."visual_graph_datasets/VERSION"]
 search = "{current_version}"
