--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "visual_graph_datasets"
-version = "0.6.2"
+version = "0.7.0"
 description = "Datasets for the training of graph neural networks (GNNs) and subsequent visualization of attributional explanations of XAI methods"
 license = "MIT"
 authors = ["awa59kst120df <awa59kst120df@gmail.com>"]
@@ -16,6 +16,10 @@ packages = [
 ]
 include = [
     "visual_graph_datasets/VERSION",
+]
+exclude = [
+    "visual_graph_datasets/experiments/results",
+    "visual_graph_datasets/experiments/results/*",
 ]
 
 [tool.poetry.dependencies]
@@ -32,6 +36,8 @@ pyyaml = ">=0.6.0"
 pycomex = ">=0.6.1"
 networkx = ">=2.8.8"
 imageio = ">=2.22.4"
+cairosvg = ">=2.5.0"
+rdkit = ">=2022.9.0"
 
 [tool.poetry_bumpversion.file."visual_graph_datasets/VERSION"]
 search = "{current_version}"
